feat: major improvements to documentation, CI/CD, and development workflow
This commit introduces comprehensive enhancements across the entire project:

Documentation Improvements:
- Added professional documentation structure with badges and clear navigation
- Created detailed installation guide with multiple installation methods
- Added comprehensive API reference with examples for all modules
- Introduced FAQ section addressing common questions and issues
- Added troubleshooting guide with solutions for common problems
- Created migration guide for users upgrading from previous versions
- Added performance optimization guide with best practices
- Introduced architecture documentation explaining internal design
- Added guide for creating custom extractors
- Created scaling guide for production deployments

CI/CD Enhancements:
- Restructured CI workflow for better performance and clarity
- Added Docker build automation with multi-stage builds
- Introduced dependency update automation via Dependabot
- Added security scanning workflow with multiple tools
- Created separate documentation deployment workflow
- Added main workflow for continuous deployment
- Improved test matrix to cover all Python versions and platforms

Development Experience:
- Added comprehensive Makefile for common development tasks
- Introduced pre-commit hooks for code quality enforcement
- Added Docker support for containerized development
- Created docker-compose configuration for local testing
- Added coverage configuration for better test insights
- Introduced pytest configuration with proper settings

Code Quality:
- Added comprehensive .gitignore with security considerations
- Updated pyproject.toml with modern Python packaging standards
- Added requirements-dev.txt for development dependencies
- Created proper issue and PR templates for better collaboration

Testing:
- Added test files for embed URL functionality
- Created real functionality tests for integration testing
- Improved test con

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,35 +1,52 @@
+# Dependabot configuration for automated dependency updates
+
 version: 2
 updates:
-  # Enable version updates for GitHub Actions
-  - package-ecosystem: "github-actions"
-    directory: "/"
-    schedule:
-      interval: "weekly"
-      day: "monday"
-      time: "06:00"
-    labels:
-      - "dependencies"
-      - "github-actions"
-    commit-message:
-      prefix: "chore"
-      include: "scope"
-    
-  # Enable version updates for Python dependencies
+  # Python dependencies
   - package-ecosystem: "pip"
     directory: "/"
     schedule:
       interval: "weekly"
       day: "monday"
-      time: "06:00"
+      time: "00:00"
+    open-pull-requests-limit: 10
+    reviewers:
+      - "AliAkhtari78"
     labels:
       - "dependencies"
       - "python"
     commit-message:
       prefix: "chore"
       include: "scope"
-    ignore:
-      # Ignore major version updates for critical dependencies
-      - dependency-name: "selenium"
-        update-types: ["version-update:semver-major"]
-      - dependency-name: "beautifulsoup4"
-        update-types: ["version-update:semver-major"]
+    pull-request-branch-name:
+      separator: "-"
+
+  # GitHub Actions
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+      day: "monday"
+      time: "00:00"
+    open-pull-requests-limit: 5
+    reviewers:
+      - "AliAkhtari78"
+    labels:
+      - "dependencies"
+      - "github-actions"
+    commit-message:
+      prefix: "ci"
+      include: "scope"
+
+  # Docker dependencies
+  - package-ecosystem: "docker"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+      day: "monday"
+      time: "00:00"
+    labels:
+      - "dependencies"      - "docker"
+    commit-message:
+      prefix: "build"
+      include: "scope"
