--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,13 +2,18 @@ name: CI
 
 on:
   push:
-    branches: [ master, main, develop ]
+    branches: [ main, master, develop ]
   pull_request:
-    branches: [ master, main, develop ]
+    branches: [ main, master, develop ]
   workflow_dispatch:
+
+env:
+  PYTHON_VERSION: "3.11"
+  POETRY_VERSION: "1.7.1"
 
 jobs:
   lint:
+    name: Lint Code
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -16,52 +21,56 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.11'
+        python-version: ${{ env.PYTHON_VERSION }}
     
     - name: Cache pip packages
       uses: actions/cache@v4
       with:
         path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-lint-${{ hashFiles('**/requirements.txt', '**/pyproject.toml', '**/setup.py') }}
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements*.txt', '**/setup.py', '**/pyproject.toml') }}
         restore-keys: |
-          ${{ runner.os }}-pip-lint-
           ${{ runner.os }}-pip-
     
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install black isort flake8 mypy pylint
+        pip install black flake8 pylint mypy isort bandit[toml] safety
         pip install -e ".[dev]"
     
-    - name: Check formatting with black
+    - name: Run Black
       run: black --check src/ tests/
     
-    - name: Check import sorting with isort
+    - name: Run isort
       run: isort --check-only src/ tests/
     
-    - name: Lint with flake8
+    - name: Run Flake8
       run: flake8 src/ tests/
     
-    - name: Type checking with mypy
-      run: mypy src/ || true  # Allow mypy to fail for now
+    - name: Run Pylint
+      run: pylint src/    - name: Run MyPy
+      run: mypy src/ --ignore-missing-imports
     
-    - name: Lint with pylint
-      run: pylint src/ || true  # Allow pylint to fail for now
+    - name: Run Bandit Security Scan
+      run: bandit -r src/ -f json -o bandit-report.json
+    
+    - name: Check dependencies with Safety
+      run: safety check
+    
+    - name: Upload Bandit Report
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: bandit-security-report
+        path: bandit-report.json
 
   test:
-    needs: lint
+    name: Test Python ${{ matrix.python-version }} on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
-        exclude:
-          # Exclude some combinations to reduce build time
-          - os: macos-latest
-            python-version: '3.8'
-          - os: macos-latest
-            python-version: '3.9'
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
     
     steps:
     - uses: actions/checkout@v4
@@ -78,7 +87,7 @@ jobs:
           ~/.cache/pip
           ~/Library/Caches/pip
           ~\AppData\Local\pip\Cache
-        key: ${{ runner.os }}-pip-${{ matrix.python-version }}-${{ hashFiles('**/requirements.txt', '**/pyproject.toml', '**/setup.py') }}
+        key: ${{ runner.os }}-pip-${{ matrix.python-version }}-${{ hashFiles('**/requirements*.txt', '**/setup.py', '**/pyproject.toml') }}
         restore-keys: |
           ${{ runner.os }}-pip-${{ matrix.python-version }}-
           ${{ runner.os }}-pip-
@@ -86,47 +95,33 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -e ".[dev]"
-    
-    - name: Run tests with pytest
+        pip install pytest pytest-cov pytest-xdist pytest-timeout
+        pip install -e ".[dev]"    - name: Run tests with coverage
       run: |
-        pytest -v --cov=spotify_scraper --cov-report=xml --cov-report=html --cov-report=term
-    
-    - name: Upload coverage data
-      if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.11'
-      uses: actions/upload-artifact@v4
-      with:
-        name: coverage-data
-        path: |
-          coverage.xml
-          htmlcov/
-        retention-days: 7
-
-  coverage:
-    needs: test
-    runs-on: ubuntu-latest
-    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
-    
-    steps:
-    - uses: actions/checkout@v4
-    
-    - name: Download coverage data
-      uses: actions/download-artifact@v4
-      with:
-        name: coverage-data
+        pytest tests/ -v -n auto --cov=src/spotify_scraper --cov-report=xml --cov-report=html --cov-report=term
     
     - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v5
+      if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.11'
+      uses: codecov/codecov-action@v4
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
         file: ./coverage.xml
-        flags: unittests
-        name: codecov-umbrella
-        fail_ci_if_error: false
+        fail_ci_if_error: true
+        verbose: true
+    
+    - name: Upload coverage reports
+      if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.11'
+      uses: actions/upload-artifact@v4
+      with:
+        name: coverage-reports
+        path: |
+          coverage.xml
+          htmlcov/
 
-  build:
-    needs: test
+  integration-test:
+    name: Integration Tests
     runs-on: ubuntu-latest
+    needs: [lint, test]
     
     steps:
     - uses: actions/checkout@v4
@@ -134,81 +129,58 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.11'
+        python-version: ${{ env.PYTHON_VERSION }}
+    
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -e ".[dev,selenium]"
+        pip install pytest-integration
+    
+    - name: Set up Chrome for Selenium
+      uses: browser-actions/setup-chrome@v1
+    
+    - name: Run integration tests
+      run: |
+        pytest tests/integration/ -v --integration
+      env:
+        SPOTIFY_TEST_TRACK_ID: ${{ secrets.SPOTIFY_TEST_TRACK_ID }}
+        SPOTIFY_TEST_ALBUM_ID: ${{ secrets.SPOTIFY_TEST_ALBUM_ID }}
+        SPOTIFY_TEST_ARTIST_ID: ${{ secrets.SPOTIFY_TEST_ARTIST_ID }}
+        SPOTIFY_TEST_PLAYLIST_ID: ${{ secrets.SPOTIFY_TEST_PLAYLIST_ID }}  build-dist:
+    name: Build Distribution
+    runs-on: ubuntu-latest
+    needs: [lint, test]
+    
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: ${{ env.PYTHON_VERSION }}
     
     - name: Install build dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install build wheel setuptools
+        pip install build twine
     
-    - name: Build distribution packages
-      run: |
-        python -m build
-        python setup.py sdist bdist_wheel
+    - name: Build distribution
+      run: python -m build
     
-    - name: Check distribution packages
-      run: |
-        pip install check-wheel-contents twine
-        check-wheel-contents dist/*.whl
-        twine check dist/*
+    - name: Check distribution
+      run: twine check dist/*
     
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: dist-packages
+        name: dist
         path: dist/
-        retention-days: 7
 
-  test-install:
-    needs: build
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.8', '3.12']
-    
+  all-checks-passed:
+    name: All Checks Passed
+    runs-on: ubuntu-latest
+    needs: [lint, test, integration-test, build-dist]
     steps:
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.python-version }}
-    
-    - name: Download built packages
-      uses: actions/download-artifact@v4
-      with:
-        name: dist-packages
-        path: dist/
-    
-    - name: Test wheel installation (Unix)
-      if: runner.os != 'Windows'
-      run: |
-        python -m pip install --upgrade pip
-        pip install dist/*.whl
-        python -c "import spotify_scraper; print(spotify_scraper.__version__)"
-        spotify-scraper --version
-    
-    - name: Test wheel installation (Windows)
-      if: runner.os == 'Windows'
-      shell: bash
-      run: |
-        python -m pip install --upgrade pip
-        pip install dist/*.whl
-        python -c "import spotify_scraper; print(spotify_scraper.__version__)"
-        spotify-scraper --version
-    
-    - name: Test sdist installation (Unix)
-      if: runner.os != 'Windows'
-      run: |
-        pip uninstall -y spotify-scraper
-        pip install dist/*.tar.gz
-        python -c "import spotify_scraper; print(spotify_scraper.__version__)"
-        spotify-scraper --version
-    
-    - name: Test sdist installation (Windows)
-      if: runner.os == 'Windows'
-      shell: bash
-      run: |
-        pip uninstall -y spotify-scraper
-        pip install dist/*.tar.gz
-        python -c "import spotify_scraper; print(spotify_scraper.__version__)"
-        spotify-scraper --version
+      - name: All checks passed
+        run: echo "All CI checks passed successfully!"
