--- a/.gitignore
+++ b/.gitignore
@@ -27,18 +27,16 @@ share/python-wheels/
 MANIFEST
 
 # PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
-.tox
+
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
-.pypirc
-.idea
+
 # Unit test / coverage reports
 htmlcov/
+.tox/
 .nox/
 .coverage
 .coverage.*
@@ -46,11 +44,10 @@ htmlcov/
 nosetests.xml
 coverage.xml
 *.cover
+*.py,cover
 .hypothesis/
 .pytest_cache/
-cover/
-
-# Translations
+cover/# Translations
 *.mo
 *.pot
 
@@ -82,25 +79,25 @@ profile_default/
 ipython_config.py
 
 # pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
+.python-version
 
 # pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
+Pipfile.lock
 
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
+# poetry
+poetry.lock
+
+# pdm
+.pdm.toml
+.pdm-python
+.pdm-build/
+
+# PEP 582
 __pypackages__/
 
 # Celery stuff
 celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
+celerybeat.pid# SageMath parsed files
 *.sage.py
 
 # Environments
@@ -136,109 +133,39 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 
+# OS
+.DS_Store
+Thumbs.db
 
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
-# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
-
-# User-specific stuff
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/usage.statistics.xml
-.idea/**/dictionaries
-.idea/**/shelf
-
-# Generated files
-.idea/**/contentModel.xml
-
-# Sensitive or high-churn files
-.idea/**/dataSources/
-.idea/**/dataSources.ids
-.idea/**/dataSources.local.xml
-.idea/**/sqlDataSources.xml
-.idea/**/dynamic.xml
-.idea/**/uiDesigner.xml
-.idea/**/dbnavigator.xml
-
-# Gradle
-.idea/**/gradle.xml
-.idea/**/libraries
-
-# Gradle and Maven with auto-import
-# When using Gradle or Maven with auto-import, you should exclude module files,
-# since they will be recreated, and may cause churn.  Uncomment if using
-# auto-import.
-# .idea/artifacts
-# .idea/compiler.xml
-# .idea/jarRepositories.xml
-# .idea/modules.xml
-# .idea/*.iml
-# .idea/modules
-# *.iml
-# *.ipr
-
-# CMake
-cmake-build-*/
-
-# Mongo Explorer plugin
-.idea/**/mongoSettings.xml
-
-# File-based project format
-*.iws
-
-# IntelliJ
-out/
-
-# mpeltonen/sbt-idea plugin
-.idea_modules/
-
-# JIRA plugin
-atlassian-ide-plugin.xml
-
-# Cursive Clojure plugin
-.idea/replstate.xml
-
-# Crashlytics plugin (for Android Studio and IntelliJ)
-com_crashlytics_export_strings.xml
-crashlytics.properties
-crashlytics-build.properties
-fabric.properties
-
-# Editor-based Rest Client
-.idea/httpRequests
-
-# Android studio 3.1+ serialized cache file
-.idea/caches/build_file_checksums.ser
-
-
-SpotifyScraper/temo.py
-
-# Test files
-test_real_functionality.py
-test_environment/
-test_embed_url.py
-
-# Virtual environments
+# Project specific
+downloads/
+cache/
+logs/
+*.mp3
+*.jpg
+*.pngtest_output/
 package_build_env/
+test_environment/
 
-# Claude Code local settings
+# Sensitive files
 .claude/
 CLAUDE.md
+
+# Private discovery and tool reports
+MCP_TOOLS_REPORT.md
+TOOL_DISCOVERY_REPORT.md
+DISCOVERY_SUMMARY.md
+scripts/automation-summary.md
+scripts/verify-automation.py
+FILESYSTEM_SERVER_ANALYSIS.md
+COMPLETE_MCP_TOOL_INVENTORY.md
+test_taskmaster/
 .cursorrules
 copilot-instructions.md
-
-# Authentication and credentials
-cookies.txt
-*.cookie
-*.cookies
-credentials.*
-*_credentials.*
-auth.json
-token.json
-secrets.json
-
-# Local configuration files
-config.local.json
-settings.local.json
-.env.local
-.env.*.local
