--- a/setup.cfg
+++ b/setup.cfg
@@ -57,3 +57,45 @@ exclude = .git,__pycache__,build,dist,venv,.venv,package_build_env
 ignore = E203, W503
 per-file-ignores =
     tests/*:E402,E501,F841
+[isort]
+profile = black
+line_length = 100
+multi_line_output = 3
+include_trailing_comma = True
+force_grid_wrap = 0
+use_parentheses = True
+ensure_newline_before_comments = True
+
+[mypy]
+python_version = 3.11
+warn_return_any = True
+warn_unused_configs = True
+ignore_missing_imports = True
+strict_optional = True
+disallow_untyped_defs = True
+disallow_incomplete_defs = True
+check_untyped_defs = True
+disallow_untyped_decorators = False
+no_implicit_optional = True
+warn_redundant_casts = True
+warn_unused_ignores = True
+warn_no_return = True
+warn_unreachable = True
+strict_equality = True
+
+[pylint.messages_control]
+disable = C0111,C0103,R0903,R0913,W0212,W0622
+max-line-length = 100
+
+[tool:pytest]
+testpaths = tests
+python_files = test_*.py
+python_classes = Test*
+python_functions = test_*
+
+[bdist_wheel]
+universal = 1
+
+[egg_info]
+tag_build = 
+tag_date = 0
